tests/snapshots/gc__gc_adopted_after_rollback.snap
---
source: tests/gc.rs
expression: r.stdout
---
gc: <HOME>/.local/state/ricepilot
nothing outside that directory is removed, and nothing in it unless its name is typed back.

the attic — <HOME>/.local/state/ricepilot/attic
  KEPT       <HOME>/.local/state/ricepilot/attic/<TS>
             <N> directories, 2 files; <N> bytes
             - holds <HOME>/.local/state/ricepilot/attic/<TS><HOME>/.config/hypr, the directory adopt moved out of ~/.config/hypr, and nothing is at ~/.config/hypr now: this is the way back to it, which rollback does not take (D49). to put it back: mv -nT <HOME>/.local/state/ricepilot/attic/<TS><HOME>/.config/hypr <HOME>/.config/hypr
  candidate  <HOME>/.local/state/ricepilot/attic/<TS>
             <N> directories, 1 link; <N> bytes
             holds only what <HOME>/.local/state/ricepilot/journal/done-<TS>.toml says was displaced into it:
               1 link, whose targets that journal records

1 candidate (<N> bytes), 1 kept.
dry run: nothing was removed. `ricepilot gc --commit` asks for each candidate's name, and removes only the ones typed back.
