tests/snapshots/gc__gc_adopted_copy_gone.snap
---
source: tests/gc.rs
expression: r.stdout
---
gc: <HOME>/.local/state/ricepilot
nothing outside that directory is removed, and nothing in it unless its name is typed back.

the attic — <HOME>/.local/state/ricepilot/attic
  KEPT       <HOME>/.local/state/ricepilot/attic/<TS>
             <N> directories, 2 files; <N> bytes
             - holds <HOME>/.local/state/ricepilot/attic/<TS><HOME>/.config/hypr, the directory adopt moved out of ~/.config/hypr; its copy, <HOME>/.local/share/ricepilot/profiles/mine/hypr, is not there any more, so this is the only copy

no candidates, 1 kept.
dry run: nothing was removed. `ricepilot gc --commit` asks for each candidate's name, and removes only the ones typed back.
