tests/snapshots/gc__gc_dry_run.snap
---
source: tests/gc.rs
expression: r.stdout
---
gc: <HOME>/.local/state/ricepilot
nothing outside that directory is removed, and nothing in it unless its name is typed back.

the attic — <HOME>/.local/state/ricepilot/attic
  candidate  <HOME>/.local/state/ricepilot/attic/<TS>
             <N> directories, 2 links; <N> bytes
             holds only what <HOME>/.local/state/ricepilot/journal/done-<TS>.toml says was displaced into it:
               2 links, whose targets that journal records
  candidate  <HOME>/.local/state/ricepilot/attic/<TS>
             <N> directories, 3 links; <N> bytes
             holds only what <HOME>/.local/state/ricepilot/journal/done-<TS>.toml says was displaced into it:
               3 links, whose targets that journal records

verify-config copies — <HOME>/.local/state/ricepilot/verify
  candidate  <HOME>/.local/state/ricepilot/verify/<TS>
             <N> directories, 1 file, 1 socket, fifo or device; <N> bytes
             a scratch copy the sandboxed verify-config parsed (D55); nothing refers to it

3 candidates (<N> bytes), 0 kept.
dry run: nothing was removed. `ricepilot gc --commit` asks for each candidate's name, and removes only the ones typed back.
